Closed
Bug 40960
Opened 25 years ago
Closed 25 years ago
License Agreement in Installer does not display correctly.
Categories
(SeaMonkey :: Installer, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M17
People
(Reporter: Crimson2, Assigned: samir_bugzilla)
References
Details
(Whiteboard: [nsbeta2+])
The License Agreement when running the installer comes up as squares, arrows,
and numbers. If i cut and paste these outside of the installer window, the text
comes out fine, ie. Mozilla Preview Release Read Me - was displayed in upward
arrows and squares. It also looks this way when you go to the next screen to
ACCEPT this agreement. Nothing else looks out of place, just the text in the
License Agreement Window.
System Config
-----------------
XFree86 Version 4.0 / X Window System
(protocol Version 11, revision 0, vendor release 6400)
Release Date: 8 March 2000
Device "Creative Graphics Blaster TNT2"
Default mode "1024x768": 94.5 MHz, 68.7 kHz, 85.0 Hz
NV: driver for NVIDIA chipsets: RIVA128, RIVATNT, RIVATNT2,
RIVATNT2 (Ultra), RIVATNT2 (Vanta), RIVATNT2 M64,
RIVATNT2 (Integrated), GeForce 256, GeForce DDR, Quadro
Assignee | ||
Comment 2•25 years ago
|
||
Matthew,
Does your system support the font I use:
"-misc-fixed-medium-r-*-*-*-80-*-*-*-*-*-*"
If not, please suggest a similar sized generic font that will work on your
system and I will look into adopting the same. Thanks. (Until I hear back this
is in the M30 bin.)
Target Milestone: --- → M30
Comment 4•25 years ago
|
||
I'm running Redhat Linux 6.2, and I get this problem too. See bug 41512.
I don't know what font to look for. "xset q -display :0" shows my font path,
and a find . -iname "*fixed*" in the lowest directory of my font path comes up
blank.
Somehow I have a feeling that this is an nsbeta2 bug. I don't think that anyone
can enforce a license agreement that isn't displayed properly.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 5•25 years ago
|
||
Joseph,
Feel free to nominate it for nsbeta2. Your point is well taken.
Comment 6•25 years ago
|
||
This bug might have something to do with XFree86 4.0 - as that is what I'm using
at home. At work on a very clean install of Redhat 6.2 I don't have this problem.
Matthew Dean: what version of XFree86 are you running?
Keywords: nsbeta2
Reporter | ||
Comment 7•25 years ago
|
||
XFree86 Version 4.0 / X Window System
(protocol Version 11, revision 0, vendor release 6400)
Release Date: 8 March 2000
I did a complete uninstall of the stock XFree86 3.3.5 that came with Slack 7, rm
-rf /usr/X11R6
and downloaded the source from ftp.xfree86.com and reinstalled, as far as i can
tell this font doesn't appear to be part of the 4.0 default installation,
perhaps fonts added from redhat? However I'll check to see if there's a newer
version of 4.0 and install again.
Reporter | ||
Comment 8•25 years ago
|
||
Ok, I went ahead and downloaded the all the fonts that were in the X 4.0 binary
distribution, and I do have all the fonts that come with the default clean
installation.
cx543622-a:/home/sabotaged/xfnts/lib/X11/fonts# diff . /usr/X11R6/lib/X11/fonts
Common subdirectories: ./75dpi and /usr/X11R6/lib/X11/fonts/75dpi
Common subdirectories: ./CID and /usr/X11R6/lib/X11/fonts/CID
Common subdirectories: ./PEX and /usr/X11R6/lib/X11/fonts/PEX
Only in /usr/X11R6/lib/X11/fonts: encodings
Common subdirectories: ./local and /usr/X11R6/lib/X11/fonts/local
Common subdirectories: ./misc and /usr/X11R6/lib/X11/fonts/misc
Reporter | ||
Comment 9•25 years ago
|
||
Ok, I went ahead and downloaded the all the fonts that were in the X 4.0 binary
distribution, and I do have all the fonts that come with the default clean
installation.
cx543622-a:/home/sabotaged/xfnts/lib/X11/fonts# diff . /usr/X11R6/lib/X11/fonts
Common subdirectories: ./75dpi and /usr/X11R6/lib/X11/fonts/75dpi
Common subdirectories: ./CID and /usr/X11R6/lib/X11/fonts/CID
Common subdirectories: ./PEX and /usr/X11R6/lib/X11/fonts/PEX
Only in /usr/X11R6/lib/X11/fonts: encodings
Common subdirectories: ./local and /usr/X11R6/lib/X11/fonts/local
Common subdirectories: ./misc and /usr/X11R6/lib/X11/fonts/misc
btw, in the fonts/misc , do these 2 fonts fit the criteria?
5x8.pcf.gz -misc-fixed-medium-r-normal--8-80-75-75-c-50-iso10646-1
5x8-ISO8859-1.pcf.gz -misc-fixed-medium-r-normal--8-80-75-75-c-50-iso8859-1
Assignee | ||
Comment 10•25 years ago
|
||
Do either of you have a debug build? If so, try compiling and running the
binary. It resides in mozilla/xpinstall/wizard/unix/src2. Alter the fonts at:
http://lxr.mozilla.org/seamonkey/source/xpinstall/wizard/unix/src2/XIDefines.h#7
9 and recompile. Choose a font that will allow 80 columns of text to be
displayed. Let me know what font works for you. Thanks.
Comment 11•25 years ago
|
||
Putting on [nsbeta2+] radar for beta2 fix.
Why is Target Milestone M30?
Whiteboard: [nsbeta2+]
Assignee | ||
Comment 12•25 years ago
|
||
I am not able to reproduce this on my system. Grace, since it is now nsbeta2+
can you find a system with XFree86 4.0 or have IS install such a system? Then
we can go about determining the font. Thanks.
Status: NEW → ASSIGNED
Target Milestone: M30 → M17
Comment 13•25 years ago
|
||
I'm building a debug build right now. Will update later.
Comment 14•25 years ago
|
||
Alright, I downloaded Xfnts.tgz from XFree86.org and untarred it and looked in
one of the font alias files. I found a font that works:
-misc-fixed-medium-r-normal--8-80-75-75-c-50-iso8859-1
I don't know how this font system works, but it would seem like the font that
Samir mentioned should match the font that I found (that works). If * matches
anything... In the mean time, If I change the lines:
#define README_FONT "-misc-fixed-medium-r-*-*-*-80-*-*-*-*-*-*"
#define LICENSE_FONT "-misc-fixed-medium-r-*-*-*-80-*-*-*-*-*-*"
to:
#define README_FONT "-misc-fixed-medium-r-normal--8-80-75-75-c-50-iso8859-1"
#define LICENSE_FONT "-misc-fixed-medium-r-normal--8-80-75-75-c-50-iso8859-1"
then I can read the installer notices just fine.
I'll keep the build around in case there is something else you want tested.
Assignee | ||
Comment 15•25 years ago
|
||
Joseph,
Thanks for taking the time to figure this on your machine! I don't think I'll
need your build so feel free to trash it. One concern is that the font is even
smaller than what it's currently at. I'll experiment with the supplied font to
make sure it works for a stock RH 6.1 installation and maybe have Grace verify
it works on other configurations she has access to. If it's not significantly
smaller we should go with this font. Once again, thanks a ton, Joseph!
Assignee | ||
Comment 16•25 years ago
|
||
I've used Joseph's supplied font except that I've increased the size to 100 from
80 to make it more readable. Could someone with an XFree86 4.0 installation
please verify this? Should be picked up by tomorrow's builds. Thanks.
The new font adopted is:
#define README_FONT "-misc-fixed-medium-r-normal--8-100-75-75-c-50-iso8859-1"
#define LICENSE_FONT "-misc-fixed-medium-r-normal--8-100-75-75-c-50-iso8859-1"
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 18•25 years ago
|
||
finally got around to testing this at home. looks good, on X4.0 thanks.
Reporter | ||
Comment 19•25 years ago
|
||
Yes this bug is now fixed also on my system.
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•