Fix font issue: make license readable in installer. [nsbeta2+ b=40960; r=ssu]